test/SemanticAnalysis/Predicates/AliasNonBoolPredicateTypedTemplateVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

interface TestInterface {
	void method();
}

template <typename T>
using TestPredicate = T;

// CHECK: .loci:12:11: error: alias 'TestPredicate' has non-boolean type 'typename_t<T>' and therefore cannot be used in predicate
template <TestPredicate T>
using Test = T;

// CHECK: 1 error generated.
